--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -47,20 +47,20 @@ body {
 
 /* 🔹 Logo */
 .logo {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   gap: 10px;
   font-size: clamp(20px, 1.4vw, 24px);
-  font-weight: bold;
+  font-weight: 600;
+  font-size: 24px;
   color: #ff6b3d;
   text-decoration: none;
 }
 
 .logoe {
-  height: 48px;
+  height: 60px;
   object-fit: contain;
 }
-
 /* 🔹 Navigation Menu */
 .nav-menu {
   display: flex;
