--- a/src/components/Billing.jsx/Billing.css
+++ b/src/components/Billing.jsx/Billing.css
@@ -1,9 +1,12 @@
+/* .cartitem-1{
+  display: flex;
+} */
 .cartitems-total {
   flex: 1;
   display: flex;
   flex-direction: column;
   gap: 40px;
-  margin-right: 200px;
+  /* margin-right: 200px; */
 }
 .cartitems-total-item {
   display: flex;
