--- a/src/components/Billing.jsx/Billing.css
+++ b/src/components/Billing.jsx/Billing.css
@@ -1,12 +1,9 @@
-/* .cartitem-1{
-  display: flex;
-} */
+
 .cartitems-total {
   flex: 1;
   display: flex;
   flex-direction: column;
   gap: 40px;
-  /* margin-right: 200px; */
 }
 .cartitems-total-item {
   display: flex;
@@ -29,6 +26,7 @@
   font-size: 16px;
   font-weight: 500;
   margin-top: 70px;
+  margin-left: 150px;
 }
 .cartitems-promocode p {
   color: #555;
@@ -49,7 +47,7 @@
   height: 50px;
 }
 .cartitems-promobox button {
-  width: 130px;
+  width: 150px;
   height: 58px;
   font-size: 16px;
   background: #2d96c7;
