--- a/src/Style/Shop.css
+++ b/src/Style/Shop.css
@@ -1,8 +1,12 @@
 /* Hero Section */
 .hero {
-  background: #b7dce4;
-  padding: 60px 40px;
-  text-align: center;
+  /* background: #b7dce4; */
+  background-image: url(b4.jpg);
+  padding: 70px 40px;
+  text-align: start;
+  margin: 10px 50px 10px 50px;
+  border-radius: 10px;
+  height: 300px;
 }
 
 .hero h1 {
